--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "animate.css": "^4.1.1",
-    "solid-js": "^1.7.6"
+    "solid-js": "^1.7.6",
+    "tailwindcss-animatecss": "^3.0.4"
   }
 }
