--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@solid-primitives/scroll": "^2.0.18",
     "@solidjs/router": "^0.8.3",
     "animate.css": "^4.1.1",
-    "solid-js": "^1.7.6"
+    "solid-js": "^1.7.6",
+    "vite-plugin-solid-svg": "^0.6.4"
   }
 }
