--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommands": "vite build",
+  "buildCommand": "vite build",
   "cleanUrls": true,
   "rewrites": [{ "source": "/(.*)", "destination": "/src/404.tsx" }]
 }
